clusters/lotr/database/pgAdmin/app/IngressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: database
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgadmin.pixelstack.live`)
      kind: Rule
      services:
        - name: pgadmin
          port: 80
      middlewares:
        - name: secured
